# MonkeRun

./: Cargo.toml  LICENSE  README.md
assets/blender/: baller.blend  baller.blend1  lose.blend  lose.blend1  menu.blend  menu.blend1  win.blend  win.blend1
assets/models/: Cube.mtl  Floor.mtl  LoseCube.mtl  LoseSuzanne.mtl  Wall.mtl  WinSuzanne.001.mtl  end.mtl  lava.mtl  trophy.mtl
assets/scenes/: baller.json  lose.json  menu.json  win.json
assets/shaders/: fragment_shader.glsl  ui_fragment.glsl  ui_vertex.glsl  vertex_shader.glsl
src/: game.rs  game_event.rs  game_init.rs  game_loop.rs  main.rs  menu.rs
src/scenes/: game.rs  lose.rs  menu.rs  mod.rs  win.rs
