[package]
name = "monke_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_opengl_rust = { git = "https://github.com/F1L1Pv2/AsciiOpengl-Rust " }
glium = "0.32.1"
device_query = "1.1.3"
fontdue = "0.7.3"
